<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <Switch
        android:id="@+id/switchForDarkmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/darkmode"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/textViewLanguage"
        app:layout_constraintTop_toBottomOf="@+id/switchForDarkmode" />

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="@+id/switchForDarkmode"
        app:layout_constraintTop_toBottomOf="@+id/switchForDarkmode" />

</androidx.constraintlayout.widget.ConstraintLayout>